added full Tstack realisation, update TCalc calc method to nums with any length, rename test file

--- a/lab3_stack/tests/tests.vcxproj
+++ b/lab3_stack/tests/tests.vcxproj
@@ -129,7 +129,7 @@
   <ItemGroup>
     <ClCompile Include="gtest-all.cc" />
     <ClCompile Include="test_main.cpp" />
-    <ClCompile Include="test_tmatrix.cpp" />
+    <ClCompile Include="test_stack.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gtest.h" />
