--- a/lab3_stack/lab3_stack/lab3_stack.vcxproj.filters
+++ b/lab3_stack/lab3_stack/lab3_stack.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="TCalc.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
