--- a/lab3_stack/tests/tests.vcxproj
+++ b/lab3_stack/tests/tests.vcxproj
@@ -127,7 +127,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\lab3_stack\TCalc.cpp" />
     <ClCompile Include="gtest-all.cc" />
+    <ClCompile Include="test_calc.cpp" />
     <ClCompile Include="test_main.cpp" />
     <ClCompile Include="test_stack.cpp" />
   </ItemGroup>
