--- a/lab3_stack/tests/tests.vcxproj.filters
+++ b/lab3_stack/tests/tests.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="test_stack.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="test_calc.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\lab3_stack\TCalc.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gtest.h">
